--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import NewsletterToast from '../components/NewsletterToast.astro';
+import NewsletterSuccessToast from '../components/NewsletterSuccessToast.astro';
 
 import { DISQUS, GA } from '../consts';
 
@@ -21,6 +22,7 @@ const { meta } = Astro.props;
     </main>
     <Footer />
     <NewsletterToast />
+    <NewsletterSuccessToast />
 
     <script
       async
