--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -85,6 +85,10 @@
       @apply mb-2;
     }
 
+    hr {
+      @apply border-t border-primary my-6;
+    }
+
     pre,
     .highlight {
       @apply bg-[#272822] p-6 border-y border-transparent overflow-auto text-[#ccc] block leading-[1.4em] my-6 font-mono rounded-md;
@@ -162,6 +166,7 @@
 
     pre {
       @apply bg-[#272822] p-6 border-y border-transparent overflow-auto text-[#ccc] block leading-[1.4em] my-6 font-mono rounded-md;
+      max-height: var(--code-block-max-h);
       scrollbar-width: thin;
       scrollbar-color: theme('colors.white') transparent;
     }
